# advent_rust

./: .gitignore  Cargo.toml
advent_2023/: Cargo.toml
advent_2023/src/: err_utils.rs  file_utils.rs  grid.rs  iterator_utils.rs  lib.rs  point.rs
advent_2024/: Cargo.toml
utils/: Cargo.toml
utils/src/: file_utils.rs  grid.rs  iterator_utils.rs  lib.rs  point.rs  slotmap.rs
