[package]
name = "advent_2023"
version = "0.1.0"
edition = "2021"

[lib]
name = "utils"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
microbench = "0.5.0"
rayon = "1.8.0"
reqwest = { version = "0.11.22", features = ["blocking"] }
thiserror = "1.0.50"
