[package]
name = "advent_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
anyhow = { version = "1.0.75", features = ["backtrace"] }
microbench = "0.5.0"
rayon = "1.8.0"
